--- a/ui-web-app-reactjs/Dockerfile
+++ b/ui-web-app-reactjs/Dockerfile
@@ -1,21 +1,32 @@
-# Stage 1: Build the React app
-FROM node:14 AS build
+# Use an official Node.js runtime as the base image
+FROM node:14 as build
 
+# Set the working directory inside the container
 WORKDIR /app
-COPY package.json package-lock.json ./
+
+# Copy package.json and package-lock.json to the container
+COPY package*.json ./
+
+# Install dependencies
 RUN npm install
+
+# Copy the rest of the application code to the container
 COPY . .
+
+# Build the React application
 RUN npm run build
 
-# Stage 2: Create the production image
+# Use a lightweight Node.js runtime as the final image
 FROM node:14-alpine
 
+# Set the working directory inside the container
 WORKDIR /app
 
-COPY --from=build /app/ .  
+# Copy the built files from the previous stage to this stage
+COPY --from=build /app/build ./build
 
-RUN npm install --only=production
+# Expose the port your app is running on (adjust if needed)
+EXPOSE 8070
 
-EXPOSE 8090
-
-CMD ["npm", "start"]
+# Command to run your application
+CMD ["npm", "run", "start"]
