--- a/shoes-microservice-spring-boot/pom.xml
+++ b/shoes-microservice-spring-boot/pom.xml
@@ -33,6 +33,11 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>2.1.1.RELEASE</version>
+        </dependency>
 	</dependencies>
 
 	<build>
