--- a/shoes-microservice-spring-boot/src/main/resources/application.properties
+++ b/shoes-microservice-spring-boot/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 server.port=1002
 server.servlet.context-path=/api/v1/
+
+
+
+#--Commented as already Specified in application.yml file
+#spring.application.name=shoe-client
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
